Used flex-end instead of end

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -11,7 +11,7 @@ header::before {
 
 .navbar{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     flex-grow: 2;
     margin: 45px 15px 55px 10px;
   }
