--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap');
+
+/* @media (max-width: 700px){
+    *{
+        background-color: aquamarine;
+    }
+} */
